--- a/CardboardQualityControl/appsettings.json
+++ b/CardboardQualityControl/appsettings.json
@@ -18,9 +18,8 @@
   },
   "trainingSettings": {
     "trainingDataPath": "training-data",
-    "batchSize": 10,
-    "epochs": 20,
-    "inputWidth": 224,
-    "inputHeight": 224
+    "batchSize": 32,
+    "epochs": 50,
+    "learningRate": 0.001
   }
 }
