--- a/CardboardQualityControl/appsettings.json
+++ b/CardboardQualityControl/appsettings.json
@@ -8,7 +8,8 @@
     "Url": "rtsp://username:password@ipaddress:port"
   },
   "FileVideoSettings": {
-    "Path": "C:\\Videos\\cardboard_defects.mp4"
+    "Path": "C:\\Videos\\cardboard_defects.mp4",
+    "Loop": false
   },
   "ModelSettings": {
     "ModelPath": "quality-model.zip",
